se realizo la practica 5

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div class="practica">
             <a href="/html/practica04.html"> PRACTICA 04 : Consulta ID Usuario</a>
         </div>
+        <div class="practica">
+            <a href="/html/practica05.html"> PRACTICA 05 : Peticiones usando el objetivo Fetch</a>
+        </div>
     </div>
 </body>
 
