--- a/HTML/practica05.html
+++ b/HTML/practica05.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/style3.css">
     <title>Practica 05</title>
 </head>
 <body>
     <head>
         <center>
         <h1>Peticiones usando el objetivo Fetch</h1>
-        <h2>Usando promesas y await</h2>
+        <h2>Usando Promesas y Await</h2>
         </center>
     </head>
 
@@ -24,7 +25,7 @@
         <div id="respuesta">
 
         </div>
-    </center>
+     </center>
     </section>
 
 <Script src="/js/main.js"></Script>
