se agrego el pre examen al index

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <div class="practica">
             <a href="/html/practica05.html"> PRACTICA 05 : Peticiones usando el objetivo Fetch</a>
         </div>
+        <div class="practica">
+            <a href="/html/Preexamen01.HTML"> PRE EXAMEN 01 : Vendedores</a>
+        </div>
+        <div class="practica">
+            <a href="/html/practica05.html"> PRE EXAMEN 02 : Buscar paises y mostrar con Promesas/Await</a>
+        </div>
     </div>
 </body>
 
