se arreglo algo del index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="/html/Preexamen01.HTML"> PRE EXAMEN 01 : Vendedores</a>
         </div>
         <div class="practica">
-            <a href="/html/practica05.html"> PRE EXAMEN 02 : Buscar paises y mostrar con Promesas/Await</a>
+            <a href="/html/preexamen02.html"> PRE EXAMEN 02 : Buscar paises y mostrar con Promesas/Await</a>
         </div>
     </div>
 </body>
