se agrego al index y se termino el pre examen 03

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="practica">
             <a href="/html/preexamen02.html"> PRE EXAMEN 02 : Buscar paises y mostrar con Promesas/Await</a>
         </div>
+        <div class="practica">
+            <a href="/html/Preexmane03.html"> PRE EXAMEN 03 : Veterinaria</a>
+        </div>
     </div>
 </body>
 
